--- a/main.tex
+++ b/main.tex
@@ -148,7 +148,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{ABSTRACT}
-The abstract is a summary of your proposal. In general, your abstract should have enough information so that if I was to copy and paste your abstract into a web site, people would get the general idea of what your proposal is about. It should not go into any heavy detail, just the basics of what your project is about. The who, the what, and the why. You should keep your abstract to 200-400 words. Use this to ``hook in'' your reader.
+We are looking to construct a fully functional Yahtzee score-keeping device that allows multiple players to play the game with only the arduino hardware and a USB capable computer according to the full set of official Yahtzee rules. The program we construct will be able to take user-input decisions, generate dice rolls from those decisions, and return those rolls and a score to the user with an explanation of how their score was generated.
 
 \section{INTRODUCTION}
 While the abstract and introduction may seem like it is similar, remember that your abstract should have enough information to stand on its own. The introduction is really the actual start to your proposal. Here you should introduce the project, the people involved and give a short introduction to the why you are doing this. This should be 1-3 paragraphs.
